deploy/miportfolio/templates/deploy-miportfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: portfolio-deploy
 namespace: miportfolio
spec:
 replicas: 1
 selector:
   matchLabels:
     app: portfolio
 template:
   metadata:
     labels:
       app: portfolio
   spec:
     containers:
       - name: pod-portfolio
         image: jose196/portfolio-jose:latest
         # imagePullPolicy: Never
         ports:
           - containerPort: 80
