deploy/miportfolio/templates/service-miportfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: miportfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30010
