deploy/miportfolio/templates/ingress-miportfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: miportfolio
spec:
  ingressClassName: nginx #Esto es para que el controlador nginx gestione este Ingress
  rules:
  - host: portfolio.jrodrodriguez.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
